tests/ui/fail/invalid-multicase-format-argument.rs
#[argio::argio(multicase = "{i + }")]
fn main(n: usize) -> usize {
    n
}
